--- a/prj.conf
+++ b/prj.conf
@@ -7,10 +7,10 @@ CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_ASSERT=y
 CONFIG_REBOOT=y
-CONFIG_SERIAL=n
+CONFIG_SERIAL=y
 
 # Default app to debug logging
-CONFIG_LOG=n
+CONFIG_LOG=y
 CONFIG_LOG_IMMEDIATE=y
 CONFIG_LOG_BACKEND_SHOW_COLOR=y
 CONFIG_LOG_DEFAULT_LEVEL=4
@@ -75,7 +75,7 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_GCLOUD_REGION="europe-west1"
 CONFIG_GCLOUD_PROJECT_NAME="safecility-iot-dev"
 CONFIG_GCLOUD_REGISTRY_NAME="iot-dev-registry"
-CONFIG_GCLOUD_DEVICE_NAME="mansion-house-test0"
+CONFIG_GCLOUD_DEVICE_NAME="limerick-iaq1"
 
 # JSON
 CONFIG_JSON_LIBRARY=y
