changed bsec save period

--- a/prj.conf
+++ b/prj.conf
@@ -17,6 +17,10 @@ CONFIG_LOG_DEFAULT_LEVEL=4
 # CONFIG_LOG_BACKEND_UART=y
 # CONFIG_LOG_BACKEND_RTT=n
 
+# # Debug settings
+# CONFIG_NO_OPTIMIZATIONS=y
+# CONFIG_DEBUG=y
+
 # Expand logging memory to avoid log_strdup() errors
 CONFIG_LOG_STRDUP_MAX_STRING=256
 CONFIG_LOG_STRDUP_BUF_COUNT=12
