--- a/prj.conf
+++ b/prj.conf
@@ -81,7 +81,7 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_GCLOUD_REGION="europe-west1"
 CONFIG_GCLOUD_PROJECT_NAME="safecility-iot-dev"
 CONFIG_GCLOUD_REGISTRY_NAME="iot-dev-registry"
-CONFIG_GCLOUD_DEVICE_NAME="limerick-iaq2"
+CONFIG_GCLOUD_DEVICE_NAME="home-test1"
 
 # JSON
 CONFIG_JSON_LIBRARY=y
